# security-agent-orchestrator

./: .gitignore  CODEBASE.md  DEVELOPMENT.md  README.md  TODO.md  pyproject.toml
cao-bridge/: .gitignore  README.md  cao-session-mgr.sh  cao_bridge.py  cao_bridge_mcp.py  git_sync.py  report_registry.py  session_manager.py
cao-bridge/claude-code/: .mcp.json  .mcp.json.template  CLAUDE.md  install.sh
cao-bridge/hermes/: README.md  __init__.py  hermes-sync.sh  plugin.yaml
cao-bridge/hermes-plugin/: README.md  __init__.py  hermes-sync.sh  memory_parser.py  plugin.yaml
cao-bridge/opencode/: install.sh  install_local.sh
cao-bridge/plugin/: cao-bridge.ts
cao-bridge/sdk/: __init__.py  example_claude_sdk.py  example_opencode_sdk.py  lifecycle.py  test_sdk_lifecycle.py
cao-mcp-task-context/: pyproject.toml
cao-mcp-task-context/src/cao_mcp_task_context/: server.py
cao-mcp-task-context/tests/: test_server.py
docs/: USAGE_LOCAL.md  cao-code-map.md  cao-evo-flow.md  cao-local-only-mode.md  implementation-progress.md  recall-selective-sync-design.md  secagentnet-viz-prompt.md  secagentnet-viz.html  skill-evolution-sync-pipeline.md  webui-and-api-reference.md
docs/archive/: cao-code-map.md.bak  cao-evo-flow.md.bak  cao-integrated-execution-paths.md  evolution-trigger-chain.md  (+1 more)
tests/: test_bridge_evolution.py  test_claude_code_bridge.py  test_e2e_evolution.py  test_evolution.py  test_evolution_api.py  test_evolution_grader_mcp.py  test_heartbeat.py  test_hermes_plugin.py  test_remote.py  test_skill_evolution.py  test_skill_sync.py
web/: vite.config.ts
(+130 files in other folders)
