[project]
name = "cao-mcp-task-context"
version = "0.1.0"
description = "MCP tool server for CAO multi-agent phase workflow directory management"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.10.6",
]

[project.scripts]
"cao-task-context" = "cao_mcp_task_context.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cao_mcp_task_context"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.26.0",
]
